# rg-public

./: .gitignore  README.md  pyproject.toml
ibid_reportgen/src/app/: aws_utils.py  base.py  data_utils.py  google_utils.py  graphics_utils.py  main.py  reportgen.py  score_converters.py  upload_utils.py
ibid_reportgen/src/app/widgets/: alert.py  meta_window.py
